fix: remove the horizontal scroll bug while hovering on dashboard

--- a/frontend/youthconnect-frontend/src/app/pages/sk-official-page/dashboard/dashboard.scss
+++ b/frontend/youthconnect-frontend/src/app/pages/sk-official-page/dashboard/dashboard.scss
@@ -191,6 +191,7 @@ html, body, :host, .dashboard-container {
 .card-content {
   padding: 0;
   overflow-y: auto;
+  overflow-x: hidden;
   flex: 1;
   min-height: 0;
 
